--- a/Rapport_reunion/Rapport_reunion_14.tex
+++ b/Rapport_reunion/Rapport_reunion_14.tex
@@ -49,6 +49,11 @@ Présents à cette réunion : Bascol Kevin, Laoussing Kévin, Reynaud Nicolas.
 \item Rédaction du manuel utilisateur.
 
 \item Rédaction du bilan.
+
+\item Nicolas à préparé les fichiers "jar" pour la soutenance du 09 Janvier.
+
+\item Nicolas à également préparé une interface graphique sommaire pour le serveur.
+
 \end{itemize}
 
 
@@ -56,8 +61,7 @@ Présents à cette réunion : Bascol Kevin, Laoussing Kévin, Reynaud Nicolas.
 \subsection*{Décisions prises}
 
 \begin{itemize}[label = $\blacktriangleright$] 
-\item Arrêter de râper les carottes dans le sens de la longueur.
-\item Tout faire pour devenir assez fort psychologiquement afin d'arriver à ne pas pleurer en épluchant des oignons.
+\item Présentation du prototype lors de la soutenance du 09 Janvier 2015.
 \end{itemize}
 
 
