--- a/Rapport_reunion/Rapport_reunion_14.tex
+++ b/Rapport_reunion/Rapport_reunion_14.tex
@@ -50,9 +50,9 @@ Présents à cette réunion : Bascol Kevin, Laoussing Kévin, Reynaud Nicolas.
 
 \item Rédaction du bilan.
 
-\item Nicolas à préparé les fichiers "jar" pour la soutenance du 09 Janvier.
+\item Nicolas Reynaud a préparé les fichiers "jar" pour la soutenance du 09 Janvier.
 
-\item Nicolas à également préparé une interface graphique sommaire pour le serveur.
+\item Nicolas Reynaud a également préparé une interface graphique sommaire pour le serveur.
 
 \end{itemize}
 
