Fin partie client

--- a/Manuel_Utilisateur.tex
+++ b/Manuel_Utilisateur.tex
@@ -143,6 +143,48 @@ Une fois le pop-up disparue, une fenêtre de ce type devrait apparaitre.
 	Vous pourrez des lors cliquer sur les icons bleu pour développer les fichier, ou double cliquer sur les fichier pour les ouvrir.
 	
 \end{center}
+
+\subsection{Envoi de fichier}
+
+\begin{center}
+	Pour réaliser l'envoi d'un fichier sur le serveur, vous devez sélectionner  votre fichier dans la partie gauche du logiciel. \\
+	Les fichiers sont symbolisé par des petites feuilles blanches. \\
+	Puis ensuite sélectionner le dossier dans la partie droite dans lequel vous souhaitez envoyer le fichier. \\
+	Pour finir cliquez sur la flèche allant vers la droite. \\
+	\includegraphics[scale=0.4]{images/envoi.png}
+	Un résumé de la procédure, ici le fichier '.viminfo' sera transféré dans le dossier : 'Partage client'. 
+
+\end{center}
+
+\subsection{Récupération de fichier}
+
+\begin{center}
+	Pour récupérer un fichier commencez par sélectionner le fichier dans la partie droite du programme. \\
+	Puis sélectionner un répertoire dans la partie gauche du programme. \\
+	Cliquez ensuite sur la flèche orientée vers la gauche. \\
+	\includegraphics[scale=0.4]{images/get.png} \\
+	Un résumé de la procédure. Ici le fichier 'M1\_meteor.pdf' sera transféré dans le dossier 'Documents'. 
+\end{center}
+
+
+\subsection{La bar des menus}
+\begin{center}
+	\includegraphics[scale=0.5]{images/menu.png} \\
+	Cette barre à été désactivée.
+\end{center}
+
+\subsection{Les options de configuration}
+\begin{center}
+	\includegraphics[scale=0.5]{images/option.png} \\
+	Cette barre à été désactivée.
+\end{center}
+
+
+\section{Principe de fonctionnement du serveur}
+
+\underline{Attention} : Cette partie ne sera pas autant détaillé que la première, pour cause, cette partie est réservé a des utilisateurs 'expérimenté'
+
+
 \subsection{La bar des menus}
 
 \begin{center}
@@ -155,4 +197,6 @@ Une fois le pop-up disparue, une fenêtre de ce type devrait apparaitre.
 	\includegraphics[scale=0.5]{images/option.png} \\
 	Cette barre à été désactivée.
 \end{center}
+
+
 \end{document}
