--- a/Manuel_Utilisateur.tex
+++ b/Manuel_Utilisateur.tex
@@ -51,7 +51,8 @@ Le client une fois lancé
 Le serveur une fois lancé
 \end{center}
 
-Nous allons maintenant détailler le principe de fonctionnement des 2 parties.
+Nous allons maintenant détailler le principe de fonctionnement du client. \\
+La version du serveur n'étant qu'a un stade primaire, celui ci est fournit dans le seul but de tester le client. \\
 
 \newpage
 \section{Principe de fonctionnement du client}
@@ -129,8 +130,6 @@ Une fois le pop-up disparue, une fenêtre de ce type devrait apparaitre.
 \end{center}
 
 
-
-
 \subsection{Visualisation des fichiers}
 \begin{center}
 	Par défaut les répertoires sont replié. Un simple double clique les ouvrira. \\
@@ -178,25 +177,4 @@ Une fois le pop-up disparue, une fenêtre de ce type devrait apparaitre.
 	\includegraphics[scale=0.5]{images/option.png} \\
 	Cette barre à été désactivée.
 \end{center}
-
-
-\section{Principe de fonctionnement du serveur}
-
-\underline{Attention} : Cette partie ne sera pas autant détaillé que la première, pour cause, cette partie est réservé a des utilisateurs 'expérimenté'
-
-
-\subsection{La bar des menus}
-
-\begin{center}
-	\includegraphics[scale=0.5]{images/menu.png} \\
-	Cette barre à été désactivée.
-\end{center}
-
-\subsection{Les options de configuration}
-\begin{center}
-	\includegraphics[scale=0.5]{images/option.png} \\
-	Cette barre à été désactivée.
-\end{center}
-
-
 \end{document}
