--- a/Manuel_Utilisateur.tex
+++ b/Manuel_Utilisateur.tex
@@ -31,13 +31,13 @@ Nous verrons alors l'utilisation du client et du serveur.
 
 \section{Lancement}
 
-Pour lancer le serveur ou le client, commencer par double cliquer sur les icons associés.
+Pour lancer le serveur ou le client, commencer par double cliquer sur les icônes associés.
 A noter : Vous DEVEZ lancer le serveur avant de lancer le client.
 
 \includegraphics[scale=0.6]{images/serveur.png} 
 \includegraphics[scale=0.7]{images/client.png}
 
-Après avoir double cliqué sur les icons du programme les fenêtres suivantes apparaitrons. 
+Après avoir double cliqué sur les icones du programme les fenêtres suivantes apparaitrons. 
 
 \begin{center}
 
@@ -139,7 +139,7 @@ Une fois le pop-up disparue, une fenêtre de ce type devrait apparaitre.
 	A ceci : \\
 	\includegraphics[scale=0.5]{images/dev.png} \\
 	
-	Vous pourrez des lors cliquer sur les icons bleu pour développer les fichier, ou double cliquer sur les fichier pour les ouvrir.
+	Vous pourrez des lors cliquer sur les icônes bleu pour développer les fichier, ou double cliquer sur les fichier pour les ouvrir.
 	
 \end{center}
 
