--- a/Manuel_Utilisateur.tex
+++ b/Manuel_Utilisateur.tex
@@ -117,8 +117,8 @@ Une fois le pop-up disparue, une fenêtre de ce type devrait apparaitre.
 
 \begin{center}
 	\includegraphics[scale=0.4]{images/envoi.png} \\
-	En haut se trouve la bar des menus. \\
-	Juste en dessous la bar des options. \\
+	En haut se trouve la barre des menus. \\
+	Juste en dessous la barre des options. \\
 	
 	Pour finir la fenêtre se divise en 2 parties. \\
 	A droite : Les fichiers provenant du serveur. \\
@@ -166,7 +166,7 @@ Une fois le pop-up disparue, une fenêtre de ce type devrait apparaitre.
 \end{center}
 
 
-\subsection{La bar des menus}
+\subsection{La barre des menus}
 \begin{center}
 	\includegraphics[scale=0.5]{images/menu.png} \\
 	Cette barre à été désactivée.
