--- a/Manuel_Utilisateur.tex
+++ b/Manuel_Utilisateur.tex
@@ -169,12 +169,12 @@ Une fois le pop-up disparue, une fenêtre de ce type devrait apparaitre.
 \subsection{La barre des menus}
 \begin{center}
 	\includegraphics[scale=0.5]{images/menu.png} \\
-	Cette barre à été désactivée.
+	Cette barre a été désactivée.
 \end{center}
 
 \subsection{Les options de configuration}
 \begin{center}
 	\includegraphics[scale=0.5]{images/option.png} \\
-	Cette barre à été désactivée.
+	Cette barre a été désactivée.
 \end{center}
 \end{document}
