--- a/Manuel_Utilisateur.tex
+++ b/Manuel_Utilisateur.tex
@@ -159,7 +159,7 @@ Une fois le pop-up disparue, une fenêtre de ce type devrait apparaitre.
 
 \begin{center}
 	Pour récupérer un fichier commencez par sélectionner le fichier dans la partie droite du programme. \\
-	Puis sélectionner un répertoire dans la partie gauche du programme. \\
+	Puis sélectionnez un répertoire dans la partie gauche du programme. \\
 	Cliquez ensuite sur la flèche orientée vers la gauche. \\
 	\includegraphics[scale=0.4]{images/get.png} \\
 	Un résumé de la procédure. Ici le fichier 'M1\_meteor.pdf' sera transféré dans le dossier 'Documents'. 
