--- a/Manuel_Utilisateur.tex
+++ b/Manuel_Utilisateur.tex
@@ -147,7 +147,7 @@ Une fois le pop-up disparue, une fenêtre de ce type devrait apparaitre.
 
 \begin{center}
 	Pour réaliser l'envoi d'un fichier sur le serveur, vous devez sélectionner  votre fichier dans la partie gauche du logiciel. \\
-	Les fichiers sont symbolisé par des petites feuilles blanches. \\
+	Les fichiers sont symbolisés par des petites feuilles blanches. \\
 	Puis ensuite sélectionner le dossier dans la partie droite dans lequel vous souhaitez envoyer le fichier. \\
 	Pour finir cliquez sur la flèche allant vers la droite. \\
 	\includegraphics[scale=0.4]{images/envoi.png}
