--- a/Manuel_Utilisateur.tex
+++ b/Manuel_Utilisateur.tex
@@ -132,23 +132,23 @@ Une fois le pop-up disparue, une fenêtre de ce type devrait apparaitre.
 
 \subsection{Visualisation des fichiers}
 \begin{center}
-	Par défaut les répertoires sont replié. Un simple double clique les ouvrira. \\
+	Par défaut les répertoires sont repliés. Un simple double clique les ouvrira. \\
 	Passant alors de ceci : \\
 	\includegraphics[scale=0.5]{images/fichier.png} \\
 
 	A ceci : \\
 	\includegraphics[scale=0.5]{images/dev.png} \\
 	
-	Vous pourrez des lors cliquer sur les icônes bleu pour développer les fichier, ou double cliquer sur les fichier pour les ouvrir.
+	Vous pourrez des lors cliquer sur les icônes bleu pour développer les fichiers, ou double cliquer sur les fichiers pour les ouvrir.
 	
 \end{center}
 
 \subsection{Envoi de fichier}
 
 \begin{center}
-	Pour réaliser l'envoi d'un fichier sur le serveur, vous devez sélectionner  votre fichier dans la partie gauche du logiciel. \\
+	Pour réaliser l'envoi d'un fichier sur le serveur, vous devez sélectionner votre fichier dans la partie gauche du logiciel. \\
 	Les fichiers sont symbolisés par des petites feuilles blanches. \\
-	Puis ensuite sélectionner le dossier dans la partie droite dans lequel vous souhaitez envoyer le fichier. \\
+	Puis ensuite sélectionnez le dossier dans la partie droite dans lequel vous souhaitez envoyer le fichier. \\
 	Pour finir cliquez sur la flèche allant vers la droite. \\
 	\includegraphics[scale=0.4]{images/envoi.png}
 	Un résumé de la procédure, ici le fichier '.viminfo' sera transféré dans le dossier : 'Partage client'. 
