--- a/Manuel_Utilisateur.tex
+++ b/Manuel_Utilisateur.tex
@@ -113,7 +113,7 @@ Plusieurs cas d'erreur / message d'erreurs peuvent apparaitre. \\
 \end{center}
 
 \subsection{Visuel}
-Une fois le pop-up disparue, une fenêtre de ce type devrait apparaitre.
+Une fois le pop-up disparu, une fenêtre de ce type devrait apparaitre.
 
 \begin{center}
 	\includegraphics[scale=0.4]{images/envoi.png} \\
