--- a/Manuel_Utilisateur.tex
+++ b/Manuel_Utilisateur.tex
@@ -99,7 +99,7 @@ Plusieurs cas d'erreur / message d'erreurs peuvent apparaitre. \\
 \begin{center}
 
 	\includegraphics[scale=0.5]{images/erreurvide.png} \\
-	Si ceci apparait, vous avez oublier de remplir UN ou PLUSIEURS champs. \\
+	Si ceci apparait, vous avez oublié de remplir UN ou PLUSIEURS champs. \\
 
 	\includegraphics[scale=0.5]{images/erreurpseudo.png} \\
 	Cette erreur apparait si votre pseudo est trop long. \\
