--- a/Manuel_Utilisateur.tex
+++ b/Manuel_Utilisateur.tex
@@ -91,7 +91,7 @@ Si tel est le cas se référer a la section "Les Cas d'erreur". \\
 Dans le cas contraire, le pop-up disparait. \\
 Félicitation vous êtes maintenant connecté. \\
 
-Si vous cliquez sur annulé, vous aurez alors accès aux options mais pas aux fichier du serveur.
+Si vous cliquez sur annuler, vous aurez alors accès aux options mais pas aux fichier du serveur.
 \subsection{Les cas d'erreur}
 
 Plusieurs cas d'erreur / message d'erreurs peuvent apparaitre. \\
