fin de correction

--- a/Manuel_Utilisateur.tex
+++ b/Manuel_Utilisateur.tex
@@ -37,7 +37,7 @@ A noter : Vous DEVEZ lancer le serveur avant de lancer le client.
 \includegraphics[scale=0.6]{images/serveur.png} 
 \includegraphics[scale=0.7]{images/client.png}
 
-Après avoir double cliqué sur les icones du programme les fenêtres suivantes apparaitrons. 
+Après avoir double cliqué sur les icônes du programme les fenêtres suivantes apparaîtront. 
 
 \begin{center}
 
@@ -65,10 +65,10 @@ Dès l'ouverture du programme "Client" un pop-up d'authentification apparait.
 
 Il vous faudra alors compléter les champs pour vous authentifier.
 
-\underline{A noter} : Si le serveur est en locale ( sur votre propre machine ). \\
+\underline{A noter} : Si le serveur est en local ( sur votre propre machine ). \\
 l'adresse du serveur sera alors : \textbf{127.0.0.1} \\
 
-Le nom d'utilisateur et le mot de passe vous seront fourni par le responsable du serveur.
+Le nom d'utilisateur et le mot de passe vous seront fournis par le responsable du serveur.
 
 \underline{A noter} : Le serveur est fourni de base avec 3 comptes : \\
 \begin{itemize}
@@ -91,10 +91,10 @@ Si tel est le cas se référer a la section "Les Cas d'erreur". \\
 Dans le cas contraire, le pop-up disparait. \\
 Félicitation vous êtes maintenant connecté. \\
 
-Si vous cliquez sur annuler, vous aurez alors accès aux options mais pas aux fichier du serveur.
+Si vous cliquez sur annuler, vous aurez alors accès aux options mais pas aux fichiers du serveur.
 \subsection{Les cas d'erreur}
 
-Plusieurs cas d'erreur / message d'erreurs peuvent apparaitre. \\
+Plusieurs cas d'erreur / messages d'erreurs peuvent apparaitre. \\
 
 \begin{center}
 
@@ -122,7 +122,7 @@ Une fois le pop-up disparu, une fenêtre de ce type devrait apparaitre.
 	
 	Pour finir la fenêtre se divise en 2 parties. \\
 	A droite : Les fichiers provenant du serveur. \\
-	A gauche : Les fichiers présent sur votre ordinateur. \\
+	A gauche : Les fichiers présents sur votre ordinateur. \\
 	
 	\includegraphics[scale=0.4]{images/chemin.png} \\
 	Vous pourrez également remarquer sur le screen que en dessous de chaque coté le chemin du fichier sélectionné est indiqué.
